tests/paczka1/small_fuzzy/70623955.err
Error in line 2: 3bG A499 2,2
Error in line 4: 3bG A623 90,9
Error in line 6: gwQOU A799 70,6
Error in line 8: gwQOU A499 69,7
Error in line 13: 2Q5Oyac9c A623 33,84
